Multilayered folder structure actions

--- a/.github/workflows/rust-deploy.yml
+++ b/.github/workflows/rust-deploy.yml
@@ -12,7 +12,10 @@ env:
 jobs:
   build:
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: rust-backend
 
     steps:
     - uses: actions/checkout@v3
