--- a/.github/workflows/rust-deploy.yml
+++ b/.github/workflows/rust-deploy.yml
@@ -3,8 +3,6 @@ name: Rust-deploy
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -23,3 +21,14 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy Backend Rust
+        uses: actions/checkout@v3
+        with: 
+          host: ${{secrets.SSH_HOST}}
+          key: ${{secrets.SSH_KEY}}
+          username: ${{secrets.SSH_USERNAME}}
+
