Depends on passed

--- a/.github/workflows/rust-deploy copy.yml
+++ b/.github/workflows/rust-deploy copy.yml
@@ -23,8 +23,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    depends-on:
-    - build
+    dependsOn: build
+    condition: passed()
     steps:
       - name: Deploy Backend Rust
         uses: appleboy/ssh-action@master
