--- a/.github/workflows/rust-deploy copy.yml
+++ b/.github/workflows/rust-deploy copy.yml
@@ -29,9 +29,9 @@ jobs:
         uses: appleboy/ssh-action@master
         with: 
           host: ${{secrets.SSH_HOST}}
-          #key: ${{secrets.SSH_KEY}}
+          key: ${{secrets.SSH_KEY}}
           username: ${{secrets.SSH_USERNAME}}
-          password: ${{secrets.SSH_PASSPHRASE}}
+          #password: ${{secrets.SSH_PASSPHRASE}}
         
 
 
