--- a/.github/workflows/rust-deploy copy.yml
+++ b/.github/workflows/rust-deploy copy.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Deploy Backend Rust
         uses: appleboy/ssh-action@master
         with: 
+          run: echo ${{secrets.SSH_HOST}}
+          run: ${{secrets.SSH_KEY}}
+          run: ${{secrets.SSH_USERNAME}}
           host: ${{secrets.SSH_HOST}}
           key: ${{secrets.SSH_KEY}}
           username: ${{secrets.SSH_USERNAME}}
