--- a/.github/workflows/rust-deploy copy.yml
+++ b/.github/workflows/rust-deploy copy.yml
@@ -21,6 +21,12 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
 
+  debug:
+    run: echo ${{secrets.SSH_HOST}}
+    run: ${{secrets.SSH_KEY}}
+    run: ${{secrets.SSH_USERNAME}}
+
+
   deploy:
     runs-on: ubuntu-latest
     #needs: build
@@ -28,9 +34,6 @@ jobs:
       - name: Deploy Backend Rust
         uses: appleboy/ssh-action@master
         with: 
-          run: echo ${{secrets.SSH_HOST}}
-          run: ${{secrets.SSH_KEY}}
-          run: ${{secrets.SSH_USERNAME}}
           host: ${{secrets.SSH_HOST}}
           key: ${{secrets.SSH_KEY}}
           username: ${{secrets.SSH_USERNAME}}
