--- a/.github/workflows/rust-deploy copy.yml
+++ b/.github/workflows/rust-deploy copy.yml
@@ -32,8 +32,8 @@ jobs:
           host: ${{secrets.SSH_HOST}}
           key: ${{secrets.SSH_KEY}}
           username: ${{secrets.SSH_USERNAME}}
-          #key_path: /root/.ssh/
-          #password: ${{secrets.SSH_PASSPHRASE}} 
+          password: ${{secrets.SSH_PASSPHRASE}} 
+          script: whoami
         
 
 
