--- a/.github/workflows/rust-deploy copy.yml
+++ b/.github/workflows/rust-deploy copy.yml
@@ -3,6 +3,8 @@ name: Rust-deploy
 on:
   push:
     branches: [ "main" ]
+  pull-request:
+    branches: [ "main" ]
 
 env:
   CARGO_TERM_COLOR: always
