--- a/.github/workflows/rust-deploy copy.yml
+++ b/.github/workflows/rust-deploy copy.yml
@@ -26,14 +26,19 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    #needs: build
     steps:
-      - name: Deploy Backend Rust
+      - name: SSH Connection
         uses: appleboy/ssh-action@master
         with: 
           host: ${{secrets.SSH_HOST}}
           key: ${{secrets.SSH_KEY}}
           username: ${{secrets.SSH_USERNAME}}
+      
+      - name: Docker Compose
+        uses: actions/checkout@v3
+        uses: isbang/compose-action@v1.3.2
+        with:
+          compose-file: "./docker-compose.yml"
           
 
         
