--- a/.github/workflows/rust-deploy copy.yml
+++ b/.github/workflows/rust-deploy copy.yml
@@ -35,10 +35,10 @@ jobs:
           username: ${{secrets.SSH_USERNAME}}
       
       - name: Docker Compose
-        uses: actions/checkout@v3
-        uses: isbang/compose-action@v1.3.2
-        with:
-          compose-file: "./docker-compose.yml"
+        - uses: actions/checkout@v3
+        - uses: isbang/compose-action@v1.3.2
+            with:
+              compose-file: "./docker-compose.yml"
           
 
         
