--- a/.github/workflows/rust-deploy copy.yml
+++ b/.github/workflows/rust-deploy copy.yml
@@ -25,7 +25,7 @@ jobs:
 
 
   deploy:
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
     steps:
       - name: SSH Connection
         uses: appleboy/ssh-action@master
