--- a/.github/workflows/rust-deploy copy.yml
+++ b/.github/workflows/rust-deploy copy.yml
@@ -25,7 +25,7 @@ jobs:
 
 
   deploy:
-    #runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: SSH Connection
         uses: appleboy/ssh-action@master
@@ -35,8 +35,8 @@ jobs:
           username: ${{secrets.SSH_USERNAME}}
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Compose
-        uses: isbang/compose-action@v1.3.2
+      #- name: Compose
+      #  uses: isbang/compose-action@v1.3.2
         with:
           compose-file: "./docker-compose.yml"
           
