--- a/.github/workflows/rust-deploy copy.yml
+++ b/.github/workflows/rust-deploy copy.yml
@@ -33,6 +33,7 @@ jobs:
           host: ${{secrets.SSH_HOST}}
           key: ${{secrets.SSH_KEY}}
           username: ${{secrets.SSH_USERNAME}}
+          compose-file: "./docker-compose.yml"
       - name: Checkout
         uses: actions/checkout@v3
       #- name: Compose
