--- a/.github/workflows/rust-deploy copy.yml
+++ b/.github/workflows/rust-deploy copy.yml
@@ -33,13 +33,13 @@ jobs:
           host: ${{secrets.SSH_HOST}}
           key: ${{secrets.SSH_KEY}}
           username: ${{secrets.SSH_USERNAME}}
-          compose-file: "./docker-compose.yml"
       - name: Checkout
         uses: actions/checkout@v3
-      #- name: Compose
-      #  uses: isbang/compose-action@v1.3.2
+      - name: Compose
+        uses: isbang/compose-action@v1.3.2
         with:
           compose-file: "./docker-compose.yml"
+          run: docker-compose up -d
           
 
         
