--- a/.github/workflows/rust-deploy copy.yml
+++ b/.github/workflows/rust-deploy copy.yml
@@ -30,20 +30,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: SSH Connection
         uses: appleboy/ssh-action@master
         with: 
           host: ${{secrets.SSH_HOST}}
           key: ${{secrets.SSH_KEY}}
           username: ${{secrets.SSH_USERNAME}}
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Compose
-        uses: isbang/compose-action@v1.3.2
-        with:
-          compose-file: "./docker-compose.yml"
-          run: docker-compose -f "docker-compose.yml up -d --build"
-          script: whoami
+          script: |
+            docker-compose -f "docker-compose.yml up -d --build"
+            whoami     
           
 
         
