--- a/.github/workflows/rust-deploy copy.yml
+++ b/.github/workflows/rust-deploy copy.yml
@@ -39,7 +39,7 @@ jobs:
           key: ${{secrets.SSH_KEY}}
           username: ${{secrets.SSH_USERNAME}}
           script: |
-            docker-compose -f "docker-compose.yml up -d --build"
+            docker-compose up -d
             whoami     
           
 
