--- a/rust-backend/Cargo.toml
+++ b/rust-backend/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-warp = "0.3.3"
+axum = "0.5.17"
 tokio = { version = "1.21.2", features = ["full"] }
