--- a/rust-backend/Cargo.toml
+++ b/rust-backend/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 axum = "0.5.17"
 tokio = { version = "1.21.2", features = ["full"] }
+diesel = { version = "2.0.2", features = ["postgres"] }
