Nginx in docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,8 @@ services:
       - ./rust-backend:/usr/src/app
     ports:
       - "3000:3000"
+
+  web:
+      image: nginx:latest
+      ports:
+          - "80:80"
