--- a/rust-backend/Cargo.toml
+++ b/rust-backend/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.2.1"
+axum = "0.5.17"
 tokio = { version = "1.21.2", features = ["full"] }
 diesel = { version = "2.0.1", features = ["postgres"] }
+env_logger = "0.9.1"
+log = "0.4.17"
