--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,17 @@
 version: '3'
 
 services:
-  web:
+
+  reverse-proxy:
     image: nginx:latest
+    container_name: reverse-proxy
+    depends_on:
+      - rust-backend
+    volumes:
+      - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "80:80"
+
   rust-backend:
     build: ./rust-backend
     volumes:
