--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -12,8 +12,8 @@ http {
             listen 80;
             server_name localhost 0.0.0.0;
 
-            location / {
-                proxy_pass          http://rust-backend:3000;
+            location /api {
+                proxy_pass          http://rust-backend:80;
                 proxy_set_header    X-Forwarded-For $remote_addr;
             }
         }
