--- a/next-frontend/Dockerfile
+++ b/next-frontend/Dockerfile
@@ -4,6 +4,8 @@ FROM node:16-alpine AS deps
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
+RUN yarn install
+
 # Install dependencies based on the preferred package manager
 COPY package.json* yarn.lock package-lock.json* pnpm-lock.yaml* ./
 RUN \
