--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     container_name: reverse-proxy
     depends_on:
       - rust-backend
+      - next-frontend
     volumes:
       - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
     ports:
@@ -15,12 +16,10 @@ services:
   next-frontend:
     build: ./next-frontend
     container_name: frontend
-    volumes:
-      - ./next-frontend:/usr/src/app
     depends_on:
       - rust-backend
     ports:
-      - "8080:80"
+      - "3000:80"
 
   rust-backend:
     build: ./rust-backend
@@ -28,4 +27,4 @@ services:
     volumes:
       - ./rust-backend:/usr/src/app
     ports:
-      - "5001:5000"
+      - "5000:5000"
