--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -13,12 +13,12 @@ http {
             server_name localhost 127.0.0.1;
 
             location / {
-                proxy_pass          http://frontend:80;
+                proxy_pass          http://frontend:3000/;
                 proxy_set_header    X-Forwarded-For $remote_addr;
             }
 
             location /api {
-                proxy_pass          http://backend:5000;
+                proxy_pass          http://backend:5000/;
                 proxy_set_header    X-Forwarded-For $remote_addr;
             }
         }
