--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,17 +2,17 @@ version: '3'
 
 services:
 
-  reverse-proxy:
-    image: nginx:latest
-    container_name: reverse-proxy
-    depends_on:
-      - rust-backend
-      - next-frontend
-    volumes:
-      - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
-    ports:
-      - "80:80"
-      - "443:443"
+  #reverse-proxy:
+  #  image: nginx:latest
+  #  container_name: reverse-proxy
+  #  depends_on:
+  #    - rust-backend
+  #    - next-frontend
+  #  volumes:
+  #    - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
+  #  ports:
+  #    - "80:80"
+  #    - "443:443"
 
   next-frontend:
     build: ./next-frontend
