--- a/next-frontend/Dockerfile
+++ b/next-frontend/Dockerfile
@@ -57,7 +57,7 @@ EXPOSE 3000
 ENV PORT 3000
 
 LABEL traefik.enable="true"
-LABEL traefik.http.routers.frontend.entrypoints="websecure"
+LABEL traefik.http.routers.frontend.entrypoints="web,websecure"
 LABEL traefik.http.routers.frontend.tls="true"
 LABEL traefik.http.routers.frontend.tls.certresolver="production"
 
