--- a/rust-backend/Dockerfile
+++ b/rust-backend/Dockerfile
@@ -38,5 +38,11 @@ COPY --from=builder /app/target/release/rust-backend /app
 
 EXPOSE 5000
 
+LABEL traefik.enable="true"
+LABEL traefik.http.routers.frontend.rule=Host(`weinell.dk`)
+LABEL traefik.http.routers.backend.rule=Path(`/api/`)
+LABEL traefik.http.routers.frontend.entrypoints="web,websecure"
+LABEL traefik.http.routers.frontend.tls="true"
+LABEL traefik.http.routers.frontend.tls.certresolver="production"
 
 ENTRYPOINT ["./app"]
