Add backend to rules

--- a/rust-backend/Dockerfile
+++ b/rust-backend/Dockerfile
@@ -39,10 +39,10 @@ COPY --from=builder /app/target/release/rust-backend /app
 EXPOSE 5000
 
 LABEL traefik.enable="true"
-LABEL traefik.http.routers.frontend.rule=Host(`weinell.dk`)
+LABEL traefik.http.routers.backend.rule=Host(`weinell.dk`)
 LABEL traefik.http.routers.backend.rule=Path(`/api/`)
-LABEL traefik.http.routers.frontend.entrypoints="web,websecure"
-LABEL traefik.http.routers.frontend.tls="true"
-LABEL traefik.http.routers.frontend.tls.certresolver="production"
+LABEL traefik.http.routers.backend.entrypoints="web,websecure"
+LABEL traefik.http.routers.backend.tls="true"
+LABEL traefik.http.routers.backend.tls.certresolver="production"
 
 ENTRYPOINT ["./app"]
