--- a/rust-backend/Dockerfile
+++ b/rust-backend/Dockerfile
@@ -40,7 +40,7 @@ EXPOSE 5000
 
 LABEL traefik.enable="true"
 LABEL traefik.http.routers.backend.rule=Host(`weinell.dk`)
-LABEL traefik.http.routers.backend.rule=Path(`/api/`)
+LABEL traefik.http.routers.backend.rule=PathPrefix(`/api/`)
 LABEL traefik.http.routers.backend.entrypoints="web,websecure"
 LABEL traefik.http.routers.backend.tls="true"
 LABEL traefik.http.routers.backend.tls.certresolver="production"
