--- a/next-frontend/package.json
+++ b/next-frontend/package.json
@@ -9,8 +9,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^3.9.1",
     "next": "13.0.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "zod": "^3.18.0"
   },
