Add shell for sqlite

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
 
   sqlite:
     image: nouchka/sqlite3:latest
+    stdin_open: true
+    tty: true
     volumes:
       - ./db/:/root/db/
 
