Add name for sqlite container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
 
   sqlite:
     image: nouchka/sqlite3:latest
+    container_name: sqlite
     stdin_open: true
     tty: true
     volumes:
