--- a/rust-backend/Cargo.toml
+++ b/rust-backend/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 axum = "0.5.17"
 tokio = { version = "1.21.2", features = ["full"] }
+redis = "0.22.1"
 env_logger = "0.9.1"
 log = "0.4.17"
